updated tests and forcast component to use new pipes

--- a/src/app/oaf/forecast/forecast.component.html
+++ b/src/app/oaf/forecast/forecast.component.html
@@ -35,8 +35,8 @@
           </mat-header-cell>
           <mat-cell *matCellDef="let bin">
             <ng-container *ngIf="bin.p95maximum !== 0 ; else asterisk">
-              {{ bin.p95minimum | roundDown: 2 }} to
-                  {{ bin.p95maximum | roundUp: 2 }}
+              {{ bin.p95minimum | sharedRoundDown: 2 }} to
+                  {{ bin.p95maximum | sharedRoundUp: 2 }}
             </ng-container>
             <ng-template #asterisk>
               &#x2a;
