Error bar width scales with chart dimensions

--- a/src/app/shared/ngx-charts/bubble-chart/bubble-chart/bubble-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-chart/bubble-chart/bubble-chart.component.html
@@ -51,6 +51,7 @@
           [xScale]="xScale"
           [yScale]="yScale"
           [rScale]="rScale"
+          [xDomain]="xDomain"
           [xScaleType]="xScaleType"
           [yScaleType]="yScaleType"
           [xAxisLabel]="xAxisLabel"
