--- a/src/app/oaf/commentary/commentary.component.html
+++ b/src/app/oaf/commentary/commentary.component.html
@@ -95,92 +95,19 @@
         the next {{ oaf.advisoryTimeFrame }} until
         {{ forecast.timeEnd | sharedDateTime }}:
       </p>
+
       <ul>
         <li *ngIf="forecast.bins['magnitude-3'] as bin">
-          The chance of an earthquake of magnitude {{ bin.magnitude }}
-          or higher is
-          <ng-container *ngIf="bin.probability <= 0.01 && bin.probability !== 0;
-              else mag3Prob">
-            1 in {{ 1 / bin.probability | sharedSignificantFigure: 1 }},
-            such an earthquake is possible but with a low probability.
-          </ng-container>
-          <ng-template #mag3Prob>
-            <ng-container *ngIf="bin.probability === 0; else mag3Prob">
-              earthquakes of magnitude {{ bin.magnitude }} or higher are
-              possible but with a low probability.
-            </ng-container>
-          </ng-template>
-          <ng-template #mag3Prob>
-              {{ bin.probability | oafPercent }},
-              and it is most likely that as few as
-              {{ bin.p95minimum | sharedRoundDown: 2 }} or as many as
-              {{ bin.p95maximum | sharedRoundUp: 2 }} such
-              earthquakes may occur in the case that the sequence is
-              re-invigorated by a larger aftershock.
-          </ng-template>
+          <oaf-commentary-details [bin]="bin"></oaf-commentary-details>
         </li>
         <li *ngIf="forecast.bins['magnitude-5'] as bin">
-          The chance of an earthquake of magnitude {{ bin.magnitude }}
-          or higher is
-          <ng-container *ngIf="bin.probability <= 0.01 && bin.probability !== 0;
-              else mag3Prob">
-            1 in {{ 1 / bin.probability | sharedSignificantFigure:1 }},
-            such an earthquake is possible but with a low probability.
-          </ng-container>
-          <ng-template #mag3Prob>
-            <ng-container *ngIf="bin.probability === 0; else mag3Prob">
-              earthquakes of magnitude {{ bin.magnitude }} or higher are
-              possible but with a low probability.
-            </ng-container>
-          </ng-template>
-          <ng-template #mag3Prob>
-            {{ bin.probability | oafPercent }}, and it is most likely
-            that as few as {{ bin.p95minimum | sharedRoundDown: 2 }}
-            or as many as {{ bin.p95maximum | sharedRoundUp: 2 }}
-            such earthquakes may occur.
-          </ng-template>
+          <oaf-commentary-details [bin]="bin"></oaf-commentary-details>
         </li>
         <li *ngIf="forecast.bins['magnitude-6'] as bin">
-          The chance of an earthquake of magnitude {{ bin.magnitude }}
-          or higher is
-          <ng-container *ngIf="bin.probability <= 0.01 && bin.probability !== 0;
-              else mag3Prob">
-            1 in {{ 1 / bin.probability | sharedSignificantFigure:1 }},
-            such an earthquake is possible but with a low probability.
-          </ng-container>
-          <ng-template #mag3Prob>
-            <ng-container *ngIf="bin.probability === 0; else mag3Prob">
-              earthquakes of magnitude {{ bin.magnitude }} or higher are
-              possible but with a low probability.
-            </ng-container>
-          </ng-template>
-          <ng-template #mag3Prob>
-            {{ bin.probability | oafPercent }}, and it is most likely
-            that as few as {{ bin.p95minimum | sharedRoundDown: 2 }}
-            or as many as {{ bin.p95maximum | sharedRoundUp: 2 }}
-            such earthquakes may occur.
-          </ng-template>
+          <oaf-commentary-details [bin]="bin"></oaf-commentary-details>
         </li>
         <li *ngIf="forecast.bins['magnitude-7'] as bin">
-          The chance of an earthquake of magnitude {{ bin.magnitude }}
-          or higher is
-          <ng-container *ngIf="bin.probability <= 0.01 && bin.probability !== 0;
-              else mag3Prob">
-            1 in {{ 1 / bin.probability | sharedSignificantFigure: 1 }},
-            such an earthquake is possible but with a low probability.
-          </ng-container>
-          <ng-template #mag3Prob>
-            <ng-container *ngIf="bin.probability === 0; else mag3Prob">
-              earthquakes of magnitude {{ bin.magnitude }} or higher are
-              possible but with a low probability.
-            </ng-container>
-          </ng-template>
-          <ng-template #mag3Prob>
-            {{ bin.probability | oafPercent }}, and it is most likely
-            that as few as {{ bin.p95minimum | sharedRoundDown: 2 }}
-            or as many as {{ bin.p95maximum | sharedRoundUp: 2 }}
-            such earthquakes may occur.
-          </ng-template>
+          <oaf-commentary-details [bin]="bin"></oaf-commentary-details>
         </li>
       </ul>
     </ng-container>
