Switch to dyfi data

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -1,6 +1,6 @@
 <div class="chart-container">
   <ngx-charts-bubble-chart
-    [results]="multi"
+    [results]="series"
     [xAxis]="showXAxis"
     [yAxis]="showYAxis"
     [legend]="showLegend"
