--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -2,7 +2,7 @@
 
 <div class="chart-container">
   <ng-container *ngIf="dyfiSeries as series">
-    <ngx-charts-bubble-chart
+    <ngx-charts-bubble-line-chart
       [results]="series.series"
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
@@ -13,6 +13,6 @@
       [yAxisLabel]="yAxisLabel"
       [autoScale]="autoScale"
       (select)="onSelect($event)">
-    </ngx-charts-bubble-chart>
+    </ngx-charts-bubble-line-chart>
   </ng-container>
 </div>
