--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -1,9 +1,10 @@
 <h2>Intensity vs. Distance</h2>
 
 <div class="chart-container">
-  <ng-container *ngIf="dyfiSeries as series">
+  <ng-container *ngIf="bubbleSeries || lineSeries">
     <ngx-charts-bubble-line-chart
-      [results]="series.series"
+      [results]="bubbleSeries"
+      [lineSeries]="lineSeries"
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
       [legend]="showLegend"
