--- a/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
@@ -45,26 +45,62 @@
       style="fill: rgb(255, 0, 0); opacity: 0; cursor: 'auto';"
       (mouseenter)="deactivateAll()"
     />
-    <svg:g [attr.clip-path]="clipPath">
-      <svg:g *ngFor="let series of data; trackBy:trackBy" [@animationState]="'active'">
-        <svg:g ngx-charts-bubble-series
+
+    <ng-container *ngIf="data as data">
+      <svg:g [attr.clip-path]="clipPath">
+        <svg:g
+            *ngFor="let series of data; trackBy:trackBy"
+            [@animationState]="'active'">
+          <svg:g ngx-charts-bubble-series
+            [xScale]="xScale"
+            [yScale]="yScale"
+            [rScale]="rScale"
+            [xDomain]="xDomain"
+            [xScaleType]="xScaleType"
+            [yScaleType]="yScaleType"
+            [xAxisLabel]="xAxisLabel"
+            [yAxisLabel]="yAxisLabel"
+            [colors]="colors"
+            [data]="series"
+            [activeEntries]="activeEntries"
+            [tooltipDisabled]="tooltipDisabled"
+            [tooltipTemplate]="tooltipTemplate"
+            (select)="onClick($event, series)"
+            (activate)="onActivate($event)"
+            (deactivate)="onDeactivate($event)" />
+        </svg:g>
+      </svg:g>
+    </ng-container>
+  </svg:g>
+  <ng-container *ngIf="lineSeries as lineSeries">
+    <svg:g [attr.transform]="transform" class="line-chart chart">
+      <svg:g [attr.clip-path]="clipPath">
+        <svg:g *ngFor="let series of lineSeries; trackBy:trackBy">
+          <svg:g ngx-charts-line-series
+            [xScale]="xScale"
+            [yScale]="yScale"
+            [colors]="colors"
+            [data]="series"
+            [activeEntries]="activeEntries"
+            [scaleType]="scaleType"
+            [curve]="curve"
+            [rangeFillOpacity]="1"
+            [animations]="animations"
+          />
+        </svg:g>
+        <!--
+        <svg:g ngx-charts-tooltip-area
+          *ngIf="!tooltipDisabled"
+          [dims]="dims"
+          [xSet]="xSet"
           [xScale]="xScale"
           [yScale]="yScale"
-          [rScale]="rScale"
-          [xDomain]="xDomain"
-          [xScaleType]="xScaleType"
-          [yScaleType]="yScaleType"
-          [xAxisLabel]="xAxisLabel"
-          [yAxisLabel]="yAxisLabel"
+          [results]="lineSeries"
           [colors]="colors"
-          [data]="series"
-          [activeEntries]="activeEntries"
           [tooltipDisabled]="tooltipDisabled"
-          [tooltipTemplate]="tooltipTemplate"
-          (select)="onClick($event, series)"
-          (activate)="onActivate($event)"
-          (deactivate)="onDeactivate($event)" />
+        />
+        -->
       </svg:g>
     </svg:g>
-  </svg:g>
+  </ng-container>
 </ngx-charts-chart>
