--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -2,9 +2,28 @@
 
 <div class="chart-container">
   <ng-container *ngIf="bubbleSeries || lineSeries">
-    <ngx-charts-bubble-line-chart
+    <bubble-line-chart-component
+      [scheme]="colorScheme"
+      [colorSchemeLine]="colorScheme"
+      [results]="allResults"
+      [animations]="animations"
+      [lineChart]="lineSeries"
+      [bubbleChart]="bubbleSeries"
+      [tooltipDisabled]="false"
+      [gradient]="gradient"
+      [xAxis]="showXAxis"
+      [yAxis]="showYAxis"
+      [legend]="showLegend"
+      [legendTitle]="'legend title'"
+      [showGridLines]="false"
+      [showXAxisLabel]="showXAxisLabel"
+      [showYAxisLabel]="showYAxisLabel"
+      [showRightYAxisLabel]="showYAxisLabel"
+      [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel"
+      (select)="onSelect($event)">
+    <!--
       [results]="bubbleSeries"
-      [lineSeries]="lineSeries"
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
       [legend]="showLegend"
@@ -14,6 +33,7 @@
       [yAxisLabel]="yAxisLabel"
       [autoScale]="autoScale"
       (select)="onSelect($event)">
-    </ngx-charts-bubble-line-chart>
+      -->
+    </bubble-line-chart-component>
   </ng-container>
 </div>
