New styles working

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -5,6 +5,7 @@
     <bubble-line-chart-component
       [scheme]="colorScheme"
       [colorSchemeLine]="colorScheme"
+      [customColors]="customColors"
       [results]="allResults"
       [animations]="animations"
       [lineChart]="lineSeries"
@@ -14,7 +15,6 @@
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
       [legend]="showLegend"
-      [legendTitle]="'legend title'"
       [showGridLines]="false"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
