--- a/src/app/shared/ngx-charts/bubble-chart/bubble-series/bubble-series.component.html
+++ b/src/app/shared/ngx-charts/bubble-chart/bubble-series/bubble-series.component.html
@@ -86,6 +86,7 @@
       [cy]="0"
       [r]="circle.radius"
       [fill]="circle.color"
+      [stroke]="circle.borderColor"
       [style.opacity]="circle.opacity"
       [class.active]="circle.isActive"
       [pointerEvents]="'all'"
