--- a/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
@@ -1,63 +1,97 @@
 <ngx-charts-chart
-  [view]="[width, height]"
+  [view]="[width + legendSpacing, height]"
   [showLegend]="legend"
-  [activeEntries]="activeEntries"
   [legendOptions]="legendOptions"
+  [activeEntries]="activeEntries"
   [animations]="animations"
   (legendLabelClick)="onClick($event)"
   (legendLabelActivate)="onActivate($event)"
   (legendLabelDeactivate)="onDeactivate($event)">
-  <svg:defs>
-    <svg:clipPath [attr.id]="clipPathId">
-      <svg:rect
-        [attr.width]="dims.width + 10"
-        [attr.height]="dims.height + 10"
-        [attr.transform]="'translate(-5, -5)'"/>
-    </svg:clipPath>
-  </svg:defs>
+  <svg:g [attr.transform]="transform" class="line-chart chart">
+    <svg:g [attr.clip-path]="clipPath">
+      <svg:g *ngFor="let series of lineChart; trackBy:trackBy">
+        <svg:g ngx-charts-line-series
+          [xScale]="xScale"
+          [yScale]="yScale"
+          [colors]="colors"
+          [data]="series"
+          [activeEntries]="activeEntries"
+          [scaleType]="scaleType"
+          [curve]="curve"
+          [rangeFillOpacity]="rangeFillOpacity"
+          [animations]="animations"
+        />
+      </svg:g>
+      <svg:g ngx-charts-tooltip-area
+        *ngIf="!tooltipDisabled"
+        [dims]="dims"
+        [xSet]="xSet"
+        [xScale]="xScale"
+        [yScale]="yScale"
+        [results]="combinedSeries"
+        [colors]="colors"
+        [tooltipDisabled]="tooltipDisabled"
+        (hover)="updateHoveredVertical($event)"
+      />
+      <svg:g *ngFor="let series of lineChart">
+        <svg:g ngx-charts-circle-series
+          [xScale]="xScale"
+          [yScale]="yScale"
+          [colors]="colors"
+          [data]="series"
+          [scaleType]="scaleType"
+          [visibleValue]="hoveredVertical"
+          [activeEntries]="activeEntries"
+          [tooltipDisabled]="tooltipDisabled"
+          (select)="onClick($event, series)"
+          (activate)="onActivate($event)"
+          (deactivate)="onDeactivate($event)"
+        />
+      </svg:g>
+    </svg:g>
+  </svg:g>
   <svg:g [attr.transform]="transform" class="bubble-chart chart">
-    <svg:g ngx-charts-x-axis
+      <svg:g ngx-charts-x-axis
       *ngIf="xAxis"
-      [showGridLines]="showGridLines"
-      [dims]="dims"
       [xScale]="xScale"
+      [dims]="dims"
       [showLabel]="showXAxisLabel"
       [labelText]="xAxisLabel"
       [tickFormatting]="xAxisTickFormatting"
-      [ticks]="xAxisTicks"
-      (dimensionsChanged)="updateXAxisHeight($event)"/>
+      (dimensionsChanged)="updateXAxisHeight($event)">
+    </svg:g>
     <svg:g ngx-charts-y-axis
       *ngIf="yAxis"
-      [showGridLines]="showGridLines"
       [yScale]="yScale"
       [dims]="dims"
+      [yOrient]="yOrientLeft"
+      [showGridLines]="showGridLines"
       [showLabel]="showYAxisLabel"
       [labelText]="yAxisLabel"
       [tickFormatting]="yAxisTickFormatting"
-      [ticks]="yAxisTicks"
-      (dimensionsChanged)="updateYAxisWidth($event)"/>
-    <svg:rect
-      class="bubble-chart-area"
-      x="0"
-      y="0"
-      [attr.width]="dims.width"
-      [attr.height]="dims.height"
-      style="fill: rgb(255, 0, 0); opacity: 0; cursor: 'auto';"
-      (mouseenter)="deactivateAll()"
-    />
-
-    <ng-container *ngIf="data as data">
+      (dimensionsChanged)="updateYAxisWidth($event)">
+    </svg:g>
+    <svg:g ngx-charts-y-axis
+      *ngIf="yAxis"
+      [yScale]="yScale"
+      [dims]="dims"
+      [showGridLines]="showGridLines"
+      [showLabel]="showRightYAxisLabel"
+      [labelText]="yAxisLabelRight"
+      [tickFormatting]="yRightAxisTickFormatting"
+      (dimensionsChanged)="updateYAxisWidth($event)">
+    </svg:g>
+    <ng-container *ngIf="bubbleChart as bubbleChart">
       <svg:g [attr.clip-path]="clipPath">
         <svg:g
-            *ngFor="let series of data; trackBy:trackBy"
-            [@animationState]="'active'">
+            *ngFor="let series of bubbleChart; trackBy:trackBy">
           <svg:g ngx-charts-bubble-series
             [xScale]="xScale"
             [yScale]="yScale"
             [rScale]="rScale"
             [xDomain]="xDomain"
-            [xScaleType]="xScaleType"
-            [yScaleType]="yScaleType"
+            [xScaleType]="scaleType"
+            [yScaleType]="scaleType"
             [xAxisLabel]="xAxisLabel"
             [yAxisLabel]="yAxisLabel"
             [colors]="colors"
@@ -72,35 +106,4 @@
       </svg:g>
     </ng-container>
   </svg:g>
-  <ng-container *ngIf="lineSeries as lineSeries">
-    <svg:g [attr.transform]="transform" class="line-chart chart">
-      <svg:g [attr.clip-path]="clipPath">
-        <svg:g *ngFor="let series of lineSeries; trackBy:trackBy">
-          <svg:g ngx-charts-line-series
-            [xScale]="xScale"
-            [yScale]="yScale"
-            [colors]="colors"
-            [data]="series"
-            [activeEntries]="activeEntries"
-            [scaleType]="scaleType"
-            [curve]="curve"
-            [rangeFillOpacity]="1"
-            [animations]="animations"
-          />
-        </svg:g>
-        <!--
-        <svg:g ngx-charts-tooltip-area
-          *ngIf="!tooltipDisabled"
-          [dims]="dims"
-          [xSet]="xSet"
-          [xScale]="xScale"
-          [yScale]="yScale"
-          [results]="lineSeries"
-          [colors]="colors"
-          [tooltipDisabled]="tooltipDisabled"
-        />
-        -->
-      </svg:g>
-    </svg:g>
-  </ng-container>
 </ngx-charts-chart>
