ngx tests running

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -20,20 +20,7 @@
       [showYAxisLabel]="showYAxisLabel"
       [showRightYAxisLabel]="showYAxisLabel"
       [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel"
-      (select)="onSelect($event)">
-    <!--
-      [results]="bubbleSeries"
-      [xAxis]="showXAxis"
-      [yAxis]="showYAxis"
-      [legend]="showLegend"
-      [showXAxisLabel]="showXAxisLabel"
-      [showYAxisLabel]="showYAxisLabel"
-      [xAxisLabel]="xAxisLabel"
-      [yAxisLabel]="yAxisLabel"
-      [autoScale]="autoScale"
-      (select)="onSelect($event)">
-      -->
+      [yAxisLabel]="yAxisLabel">
     </bubble-line-chart-component>
   </ng-container>
 </div>
