--- a/src/app/shared/ngx-charts/bubble-chart/bubble-chart/bubble-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-chart/bubble-chart/bubble-chart.component.html
@@ -10,12 +10,14 @@
   <svg:defs>
     <svg:clipPath [attr.id]="clipPathId">
       <svg:rect
-        [attr.width]="dims.width + 10"
-        [attr.height]="dims.height + 10"
+        [attr.width]="dims?.width + 10"
+        [attr.height]="dims?.height + 10"
         [attr.transform]="'translate(-5, -5)'"/>
     </svg:clipPath>
   </svg:defs>
-  <svg:g [attr.transform]="transform" class="bubble-chart chart">
+  <svg:g
+      [attr.transform]="transform"
+      class="bubble-chart chart">
     <svg:g ngx-charts-x-axis
       *ngIf="xAxis"
       [showGridLines]="showGridLines"
@@ -40,12 +42,14 @@
       class="bubble-chart-area"
       x="0"
       y="0"
-      [attr.width]="dims.width"
-      [attr.height]="dims.height"
+      [attr.width]="dims?.width"
+      [attr.height]="dims?.height"
       style="fill: rgb(255, 0, 0); opacity: 0; cursor: 'auto';"
       (mouseenter)="deactivateAll()"
     />
-    <svg:g [attr.clip-path]="clipPath">
+    <svg:g
+        *ngIf="data as data"
+        [attr.clip-path]="clipPath">
       <svg:g *ngFor="let series of data; trackBy:trackBy" [@animationState]="'active'">
         <svg:g ngx-charts-bubble-series
           [xScale]="xScale"
