--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.scss
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.scss
@@ -3,34 +3,30 @@
   height: 40px;
   margin-right: 1rem;
   stroke: #333;
-  stroke-width: 0.05px;
+  stroke-width: 0.5px;
   width: 40px;
 }
 
 .green {
-  fill: #27a83c;
-  .st1 {
-    stroke: #27a83c;
+  .st0, .st1 {
+    fill: #27a83c;
   }
 }
 
 .yellow {
-  fill: #F9F518;
-  .st1 {
-    stroke: #F9F518;
+  .st0, .st1 {
+    fill: #F9F518;
   }
 }
 
 .orange {
-  fill: #f0a216;
-  .st1 {
-    stroke: #f0a216;
+  .st0, .st1 {
+    fill: #f0a216;
   }
 }
 
 .red {
-  fill: #ba2d1a;
-  .st1 {
-    stroke: #ba2d1a;
+  .st0, .st1 {
+    fill: #ba2d1a;
   }
 }
