--- a/src/app/shared/css/station-overlay.scss
+++ b/src/app/shared/css/station-overlay.scss
@@ -33,31 +33,6 @@
   }
 }
 
-.station-overlay-bubble {
-  padding: 0.5em 1em;
-  display: inline-block;
-  line-height: 1;
-  max-width: 100px;
-  text-align: center;
-  width: 24%;
-}
-
-.station-overlay-bubble span {
-  margin: 0;
-  display: block;
-  white-space: nowrap;
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3)
-}
-
-.station-overlay-bubble.intensity {
-  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
-}
-
-.station-overlay-bubble.intensity span {
-  font-size: larger;
-  font-weight: bold;
-}
-
 .station-overlay-station-layer-icon.station-mmiI:before {
   border-bottom-color: $mmiI !important;
 }
@@ -106,7 +81,7 @@
   border-bottom-color: $mmiXII !important;
 }
 
-dl.description-table.station-overlay {
+.leaflet-popup shakemap-station dl.description-table {
 
   @media screen and (min-width: 300px) {
 
@@ -125,4 +100,12 @@ dl.description-table.station-overlay {
       font-size: .88em;
     }
   }
+}
+
+.leaflet-popup shakemap-station .mat-expansion-panel-body {
+  padding: 0 4px 2px;
+}
+
+.leaflet-popup shakemap-station h3 {
+  margin: 5px 5px 0;
 }
