--- a/src/app/shared/css/mmi-colors.scss
+++ b/src/app/shared/css/mmi-colors.scss
@@ -1,3 +1,5 @@
+$mmi-font-family: Tahoma, Verdana, Segoe, sans-serif;
+
 $mmiI: #FFFFFF;
 $mmiII: #ACD8E9;
 $mmiIII: #ACD8E9;
@@ -11,50 +13,76 @@ $mmiX: #C80F0A;
 $mmiXI: #C80F0A;
 $mmiXII: #C80F0A;
 
+$mmiI-text-color: #000000;
+$mmiII-text-color: #000000;
+$mmiIII-text-color: #000000;
+$mmiIV-text-color: #000000;
+$mmiV-text-color: #000000;
+$mmiVI-text-color: #000000;
+$mmiVII-text-color: #000000;
+$mmiVIII-text-color: #000000;
+$mmiIX-text-color: #000000;
+$mmiX-text-color: #000000;
+$mmiXI-text-color: #000000;
+$mmiXII-text-color: #000000;
+
 .mmiI {
+  box-shadow: inset 0 0 1px #666;
+  color: $mmiI-text-color !important;
   background-color: $mmiI !important;
 }
 
 .mmiII {
   background-color: $mmiII !important;
+  color: $mmiII-text-color !important;
 }
 
 .mmiIII {
   background-color: $mmiIII !important;
+  color: $mmiIII-text-color !important;
 }
 
 .mmiIV {
   background-color: $mmiIV !important;
+  color: $mmiIV-text-color !important;
 }
 
 .mmiV {
   background-color: $mmiV !important;
+  color: $mmiV-text-color !important;
 }
 
 .mmiVI {
   background-color: $mmiVI !important;
+  color: $mmiVI-text-color !important;
 }
 
 .mmiVII {
   background-color: $mmiVII !important;
+  color: $mmiVII-text-color !important;
 }
 
 .mmiVIII {
   background-color: $mmiVIII !important;
+  color: $mmiVIII-text-color !important;
 }
 
 .mmiIX {
   background-color: $mmiIX !important;
+  color: $mmiIX-text-color !important;
 }
 
 .mmiX {
   background-color: $mmiX !important;
+  color: $mmiX-text-color !important;
 }
 
 .mmiXI {
   background-color: $mmiXI !important;
+  color: $mmiXI-text-color !important;
 }
 
 .mmiXII {
   background-color: $mmiXII !important;
+  color: $mmiXII-text-color !important;
 }
