--- a/src/app/executive/basic-pin/basic-pin.component.html
+++ b/src/app/executive/basic-pin/basic-pin.component.html
@@ -1,22 +1,47 @@
+<ng-container *ngIf="link; else href">
+  <a [routerLink]="link">
+    <executive-basic-pin-title [title]="title">
+    </executive-basic-pin-title>
+    <executive-basic-pin-content>
+    </executive-basic-pin-content>
+    <executive-basic-pin-footer
+        [footer]="footer"
+        [product]="product">
+    </executive-basic-pin-footer>
+  </a>
+</ng-container>
+
+<ng-template #href>
+  <!-- <executive-basic-pin-title>
+  </executive-basic-pin-title>
+  <executive-basic-pin-content>
+  </executive-basic-pin-content>
+  <executive-basic-pin-footer>
+  </executive-basic-pin-footer> -->
+</ng-template>
+
+
+
+
 <!-- Basic Pin -->
-<article [routerLink]="link">
+<!-- <article [routerLink]="link"> -->
   <!-- Title -->
-  <header>
+  <!-- <header>
     <ng-container *ngIf="title; else noTitle">
       <a [routerLink]="link">{{ title }}</a>
     </ng-container>
     <ng-template #noTitle>
       <ng-content select="[card-title]"></ng-content>
     </ng-template>
-  </header>
+  </header> -->
 
   <!-- Content -->
-  <section>
+  <!-- <section>
     <ng-content select="[card-content]"></ng-content>
-  </section>
+  </section> -->
 
   <!-- Footer -->
-  <footer>
+  <!-- <footer>
     <ng-container *ngIf="footer; else noFooter">
       {{ footer }}
     </ng-container>
@@ -26,4 +51,4 @@
       </shared-product-attribution>
     </ng-template>
   </footer>
-</article>
+</article> -->
