removed card-content, cleaned up code, added comments

--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
@@ -3,7 +3,7 @@
     [product]="product"
     [title]="title"
     [footer]="footer">
-  <div card-content>
+  <div>
     <div class="dyfi-responses-badge">
       <div *ngFor="let response of responses"
           class="responses-digit"
