--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -3,7 +3,7 @@
   [product]="product"
   [title]="title">
 
-  <div card-content>
+  <div>
 
     <div class="landslides-pin-content">
       <h4>Landslides</h4>
