--- a/src/app/executive/moment-tensor-pin/moment-tensor-pin.component.html
+++ b/src/app/executive/moment-tensor-pin/moment-tensor-pin.component.html
@@ -2,7 +2,7 @@
     [link]="link"
     [product]="product"
     [title]="title">
-  <shared-beachball card-content
+  <shared-beachball
       [fillColor]="'#6ea8ff'"
       [labelAxes]="false"
       [labelPlanes]="false"
