--- a/src/app/executive/oaf-pin/oaf-pin.component.html
+++ b/src/app/executive/oaf-pin/oaf-pin.component.html
@@ -1,5 +1,5 @@
 <basic-pin [link]="link" [product]="product" [title]="title">
-  <div card-content>
+  <div>
     <p>
       Our model of the expected numbers and odds of future earthquakes.
     </p>
