--- a/src/app/executive/tsunami-pin/tsunami-pin.component.html
+++ b/src/app/executive/tsunami-pin/tsunami-pin.component.html
@@ -1,5 +1,5 @@
-<basic-pin [href]="href" [footer]="footer" [title]="title">
-  <div card-content>
+<basic-pin [href]="href" [title]="title" [footer]="footer" >
+  <div>
     <img src="../assets/tsunami.jpg" alt="Tsunami Warning Center"
         class="tsunami-logo" />
     <small>
