--- a/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
+++ b/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
@@ -22,7 +22,7 @@
         Mechanism
       </mat-header-cell>
       <mat-cell *matCellDef="let tensor">
-        <shared-beachball card-content
+        <shared-beachball
           [fillColor]="'#ffaa69'"
           [labelAxes]="false"
           [labelPlanes]="false"
