--- a/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
+++ b/src/app/executive/focal-mechanism-pin/focal-mechanism-pin.component.html
@@ -2,7 +2,7 @@
     [link]="link"
     [product]="product"
     [title]="title">
-  <shared-beachball card-content
+  <shared-beachball
       [fillColor]="'#ffaa69'"
       [labelAxes]="false"
       [labelPlanes]="false"
