changed http to https

--- a/src/app/executive/tsunami-pin/tsunami-pin.component.html
+++ b/src/app/executive/tsunami-pin/tsunami-pin.component.html
@@ -4,7 +4,7 @@
         class="tsunami-logo" />
     <small>
       To view any current tsunami advisories for this and other events please
-      visit <a href="http://www.tsunami.gov/" class="tsunami-link">
+      visit <a href="https://www.tsunami.gov/" class="tsunami-link">
       http://www.tsunami.gov</a>.
     </small>
   </div>
