Add location input to the tell us form

--- a/src/app/tell-us/form/form.component.html
+++ b/src/app/tell-us/form/form.component.html
@@ -29,7 +29,7 @@
           [update]="language.locationInfo.buttonUpdate">
       </tell-us-location>
 
-      <pre>{{
+      <!-- <pre>{{
 
         {
           ciim_mapAddress: answers.ciim_mapAddress,
@@ -38,7 +38,9 @@
           ciim_mapLon: answers.ciim_mapLon
         } | json
 
-      }}</pre>
+      }}</pre> -->
+      <location-input-map></location-input-map>
+
     </tell-us-fieldset>
 
     <!-- time -->
