--- a/src/app/tell-us/location/location.component.html
+++ b/src/app/tell-us/location/location.component.html
@@ -1,13 +1,6 @@
-<p>
-  <button mat-raised-button
-      (click)="enterLocation()"
-      [disabled]="value.ciim_mapLat !== null && value.ciim_mapLon !== null">
-    {{ enter }}
-  </button>
-
-  <button mat-raised-button
-      (click)="clearLocation()"
-      [disabled]="value.ciim_mapLat === null && value.ciim_mapLon === null">
-    {{ update }} <em>(for now clear)</em>
-  </button>
+<p class="alert info">
+  To select a location, click the
+  <button mat-raised-button class="icon-button" (click)="openLocationInput()">
+    <i class="material-icons">location_searching</i>
+  </button>on the map.
 </p>
