--- a/src/app/ground-failure/about/about.component.html
+++ b/src/app/ground-failure/about/about.component.html
@@ -1,12 +1,13 @@
 <div>
   <p>
-    We developed this product to provide an early understanding of
-    the landslides and liquefaction that may have been triggered by
-    this earthquake. It takes time for first responders and experts to
-    survey the actual damage in the area, so our product provides
-    early estimates of what may have happened. Our models provide
-    regional estimates of landslide and liquefaction hazard triggered by
-    this earthquake and do not predict specific occurrences.
+    We developed this product to provide initial awareness of the overall 
+    extent and importance of potential landslides and liquefaction, and to 
+    indicate areas in which they are most likely to have occurred. It takes 
+    time for first responders and experts to survey the actual damage in the 
+    area, so our product provides early estimates of where to focus attention 
+    and response planning. Though our models provide regional estimates of 
+    landslide and liquefaction hazard triggered by this earthquake, they do not
+    predict specific occurrences.
   </p>
 </div>
 
@@ -22,7 +23,7 @@
   <h3>How to use this product</h3>
   <p>
     If the earthquake directly impacted you or someone you care about, this
-    tool can be useful to understand the impacts form ground motion. This
+    tool can be useful to understand the impacts from ground motion. This
     information can help you make informed decisions about your safety or
     the safety of people you care about. If you are a first responder,
     building engineer, emergency manager or decision maker, this product
@@ -57,13 +58,13 @@
       Liquefaction is the loss of strength of loose, saturated soils caused by
       earthquake shaking that results in soil that behaves more like a liquid
       than a solid. Liquefaction can cause buildings to tilt, sand and water to
-      be ejected in &ldquo;sand volcanoes&rdquo;, and the ground surface to be permanently
-      deformed. Artificial fill is particularly susceptible to liquefaction.
-      Liquefaction-induced lateral spreading is a related phenomenon where
-      blocks of soil spread apart and move down gentle slopes along an
-      underlying liquefied layer. Although liquefaction can cause major damage
-      to buildings and infrastructure, it has not caused nearly as many deaths
-      in the past as landslides.
+      be ejected in &ldquo;sand volcanoes&rdquo;, and the ground surface to be
+      permanently deformed. Artificial fill is particularly susceptible to 
+      liquefaction. Liquefaction-induced lateral spreading is a related
+      phenomenon where blocks of soil spread apart and move down gentle slopes
+      along an underlying liquefied layer. Although liquefaction can cause major
+      damage to buildings and infrastructure, it has not caused nearly as many
+      deaths in the past as landslides.
     </p>
   </div>
 </div>
