--- a/src/app/tell-us/location/location.component.scss
+++ b/src/app/tell-us/location/location.component.scss
@@ -1,5 +1,11 @@
 .icon-button {
+  line-height: 2;
   margin: 0 .5em;
   min-width: 0;
   padding: 0 .5em;
+}
+
+i {
+  font-size: 16px;
+  font-weight: bold;
 }
