--- a/src/app/ground-failure/ground-failure/ground-failure.component.html
+++ b/src/app/ground-failure/ground-failure/ground-failure.component.html
@@ -40,7 +40,7 @@
 
       <ng-container *ngIf="product?.properties && (product.properties['rupture-warning'] | uppercase) !== 'FALSE'">
         ShakeMap is currently approximating this earthquake as a
-        point source, and the mapped extent of ground failiure commonly
+        point source, and the mapped extent of ground failure commonly
         changes significantly when a fault model is added, especially for
         larger earthquakes. Interpret Ground Failure results with caution
         until ShakeMap has been updated with a fault model.
